tests/lean/case.lean.expected.out
case.lean:4:2: error: focus tactic failed, focused goal has not been solved
state:
a : ℕ,
a_1 : list ℕ,
ih_1 : ℕ
⊢ ℕ
case.lean:10:2: error: focus tactic failed, focused goal has not been solved
state:
a : ℕ,
a_1 : list ℕ
⊢ ℕ
case.lean:18:4: error: focus tactic failed, focused goal has not been solved
state:
x ih_1 x : ℕ,
xs : list ℕ
⊢ ℕ
case.lean:26:2: error: focus tactic failed, focused goal has not been solved
state:
a : ℕ,
a_1 : list ℕ,
ih_1 : ℕ
⊢ ℕ
